[package]
authors = ["Sebastian Ramirez Magri <sebasmagri@gmail.com>"]
edition = "2018"
name = "issues-crawler"
version = "0.1.0"

[dependencies]
rocket = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.6"
